--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>DabsCloth - Luxury Fashion</title>
     <meta name="description" content="Discover premium luxury fashion at DabsCloth. Curated collection of high-end clothing for the discerning individual." />
     <meta name="author" content="DabsCloth" />
-    <link rel="icon" href="/favicon-dabs.png" type="image/png">
+   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -19,6 +19,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   </head>
 
   <body>
